--- a/index.html
+++ b/index.html
@@ -1,2 +1,61 @@
-<!doctype html>
-HI
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
+
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <style>
+            body {
+                padding-top: 50px;
+                padding-bottom: 20px;
+            }
+        </style>
+        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="css/main.css">
+
+        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+    </head>
+    <body>
+        <!--[if lt IE 7]>
+            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+        <![endif]-->
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-12">
+                  <div class="page-header">
+                      <h1 style="text-transform: none;"> Why Chris and Matt Should Not Try i3 </h2>
+                  </div>
+              </div>
+          </div>
+          <div class="row">
+              <div class="col-lg-12">
+                  <h4> Why not?  </h4> 
+                  <p> You will not like it! I take people bashing what I like very badly, especially on the internet.... </p>
+                  <h4> How do you know they will not like it?  </h4> 
+                  <p> Having listned to their opinions about what they like and dislike about desktop environments I know they will not see the point of it.  If you do not think that you want something very different from your window manager, and you have been searching for a solution as to why your current workflow is lacking, then you will not spend the time to learn and configure it.  Chris and Matt are very pointy clicky users, and for the kind of work they do that is needed. Tiling window managers are for people who spend most time in text editors and the command line and are pretty bad at anything else. Basically in my case I knew what I wanted and tried every desktop/wm to find it and now I am happyish with i3 (with various tweeks of course).  Without knowing what you personally want from a user experiance, it is unlikely you will think that a tiling window manager is worth it.
+                  Also configuring and learning a tiling window manager is not as bad as configuring and using vim (or emacs) but its close. Without the horrible feeling that you are doing somethings really ineffeciently most of the time is really no motivation to do htis.  You have have a sense of what the workflow you want is.  The great thing about linux is that there is likely to be something close to what you want, you just have to look.
+                  <h4> Are you a smug self richous tiling window manager user </h4> 
+                  <p> Yes! but only because I can look down my nose at all the debates about what is going on in the other environments and ignore them. Oh, and they are really quick and responsive. </p>
+                  <h4> Say if Chris and Matt do not listen you advice and try it anyway. </h4> 
+                  <p>  </p>
+
+                  
+
+              </div>
+          </div>
+      </div>
+    </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+
+        <script src="js/vendor/bootstrap.min.js"></script>
+
+        <script src="js/main.js"></script>
+    </body>
+</html>
