some fixes to graphs

--- a/flot-examples/layyah-sample.html
+++ b/flot-examples/layyah-sample.html
@@ -41,8 +41,11 @@
         </div>
         <div class="span4 offset2">
             <table class="table table-bordered">
-                <tr> <td><b>Number of Schools</b></td><td>10</td>  </tr>
-                <tr> <td><b>Number of Teachers</b></td><td>200</td> </tr>
+                <tr> <td><b>Number of Schools</b></td><td>1,176</td> </tr>
+                <tr> <td><b>Male Teachers</b></td><td>3,586</td> </tr>
+                <tr> <td><b>Female Teachers</b></td><td>3,017</td> </tr>
+                <tr> <td><b>Total Teachers</b></td><td>6,613</td> </tr>
+                <tr> <td><b>Average Teachers per School</b></td><td>5.6</td> </tr>
             </table>
         </div>
     </div>
@@ -199,8 +202,8 @@
 			},
 		};
     var plotObj = $.plot($("#pie2"), 
-            [{label:"Male Teachers", data: 45},
-             {label:"Female Teachers", data: 55}], options);
+            [{label:"Male Teachers", data: 54},
+             {label:"Female Teachers", data: 46}], options);
 	});
 	</script>
 
