some fixes to graphs

--- a/flot-examples/layyah-sample.html
+++ b/flot-examples/layyah-sample.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <h2>% Leyyah School Statisics</h1>
+    <h2>Leyyah School Statisics</h1>
 
     <div class="row">
         <div class="span10">
